--- a/Algebra/Algebra.Chapter 0 by P. Aluffi/Chapter I.ipynb
+++ b/Algebra/Algebra.Chapter 0 by P. Aluffi/Chapter I.ipynb
@@ -10,6 +10,7 @@
     "**Set** -'Collection of objects'. A set is determined by the **elements** it contains. $ A = \\{1,2,3\\}$\n",
     "<br>**Multiset** - a set, in which the elements are allowed to appear 'with multiplicity'. $ B = \\{1,2,2,3\\}$\n",
     "<br>**Singleton** - set, consisting of 1 element. $ C = \\{2\\}$\n",
+    "<br>A few famous sets are:\n",
     "<img src = \"Pictures/Sets.png\">\n",
     "### 1.2. Inclusion of sets.\n",
     "We say that a set $ S $ is a **subset** of a set $ T $ if every element of $ S $ is an element of $ T $, in symbols, $ S \\subseteq T $.\n",
