--- a/Algebra/Algebra.Chapter 0 by P. Aluffi/Chapter I.ipynb
+++ b/Algebra/Algebra.Chapter 0 by P. Aluffi/Chapter I.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     "### 1.1. Sets.\n",
-    "**Set** -'Collection of objects'. A set is determined by the *elements* it contains. $ A := \\{1,2,3\\} $\n",
+    "**Set** -'Collection of objects'. A set is determined by the **elements** it contains. $ A := \\{1,2,3\\} $\n",
     "<br>**Multiset** - a set, in which the elements are allowed to appear 'with multiplicity'. $ B := \\{1,2,2,3\\} $\n",
     "<br>**Singleton** - set, consisting of 1 element. $ C := \\{2\\} $\n",
     "<br>A few famous sets are:"
@@ -36,14 +36,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![existential quantifier](Pictures/ExistentialQuantifier.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![universal quantifier](Pictures/UniversalQuantifier.png)"
+    "Here are **quantifiers**:\n",
+    " * $ \\exists $ means *there exists...* (the **existential** quantifier);\n",
+    " * $ \\forall $ means *for all...* (the **universal** quantifier)."
    ]
   },
   {
@@ -103,7 +98,7 @@
     "Obviously, $ |S \\times T| = |S| |T| $\n",
     "<br>The operations $ \\cup, \\cap, \\sqcup, \\times $ exted to operations on whole 'families' of sets: if $ S_1, \\dots, S_n$ are sets, then:\n",
     "$$ \\bigcap_{i=1}^{n}S_i = S_1 \\cap S_2 \\cap \\dots \\cap S_n $$\n",
-    "More generally, is $ \\mathcal{P} $ is a **set of sets**, we may consider sets \n",
+    "More generally, is $ \\mathcal{P} $ is a *set of sets*, we may consider sets \n",
     "$$ \\bigcup_{S \\in \\mathcal{P}}S, \\bigcap_{S \\in \\mathcal{P}}S, \\bigsqcup_{S \\in \\mathcal{P}}S, \\prod_{S \\in \\mathcal{P}}S $$\n",
     "for the union, intersection, disjoint union and product of all sets in $ \\mathcal{P} $."
    ]
