I hope I fixed .gitignore file

--- a/Topology/Elementary Topology Problem Textbook by O.Viro and etc/Chapter I.ipynb
+++ b/Topology/Elementary Topology Problem Textbook by O.Viro and etc/Chapter I.ipynb
@@ -6,8 +6,14 @@
    "source": [
     "# Part 1. General Topology\n",
     "## Chapter I. Structures and Spaces\n",
-    "### 1. Digression on Sets\n",
-    "![A paragraph devoted to sets in Aluffi's Algebra](https://github.com/Snopoff/Notes/blob/master/Algebra/Algebra.Chapter%200%20by%20P.%20Aluffi/Chapter%20I.ipynb)"
+    "### 1. Digression on Sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://github.com/Snopoff/Notes/blob/master/Algebra/Algebra.Chapter%200%20by%20P.%20Aluffi/Chapter%20I.ipynb\">A paragraph devoted to Set Theory in Aluffi's Algebra</a>"
    ]
   },
   {
