fixed .gitignore and added emoji to highlight examples

--- a/Topology/Elementary Topology Problem Textbook by O.Viro and etc/Chapter I.ipynb
+++ b/Topology/Elementary Topology Problem Textbook by O.Viro and etc/Chapter I.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>**<span style='color:green'>Examples:</span>**\n",
+    "<br>❎**<span style='color:green'>Examples:</span>**\n",
     "<br>A **discrete topological space** is a set with the topological structure consisting of all subsets: $$ \\Omega = 2^{X} $$\n",
     "<br>An **indiscrete topological space** is a set with the topological structure consisting of only $ X $ and $ \\emptyset $: $$ \\Omega = \\{\\emptyset, X\\} $$\n",
     "<br>Let $ X = \\mathbb{R} $ and $ \\Omega $ is the set of unions of all intervals $ (a,b) $ with $ a,b \\in \\mathbb{R} $. This space is called the **real line** and the structure is referred to as the **canonical** or **standard** topology in $ \\mathbb{R} $.\n",
