last try to fix .gitignore

--- a/Algebra/Algebra.Chapter 0 by P. Aluffi/Chapter I.ipynb
+++ b/Algebra/Algebra.Chapter 0 by P. Aluffi/Chapter I.ipynb
@@ -109,9 +109,21 @@
    "source": [
     "### 1.5. Equivalence relations, partitions, quotients.\n",
     "**A relation** $ \\mathcal{R} $ on a set $ S $ is a *subset* $ R $ of the product $ S \\times S $, such that if $ (a,b) \\in R $ than $ a $ and $ b $ are 'related by $ \\mathcal{R} $' and it writes $ a\\mathcal{R}b $. \n",
-    "<br> Some relations : $ <, \\leq, =, \\thicksim $\n",
-    "<br>❎**<span style='color:green'>Example:</span>** $ \\mathcal{R} $ is $ = $, then a subset $ R \\subset S \\times S: R = \\{(a,b) \\in S \\times S | a = b\\} $\n",
-    "**An equivalence relation** on a set $ S $ is any relation $ \\thicksim $ satisfying 3 properties:\n",
+    "<br> Some relations : $ <, \\leq, =, \\thicksim $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>❎**<span style='color:green'>Example:</span>** $ \\mathcal{R} $ is $ = $, then a subset $ R \\subset S \\times S: R = \\{(a,b) \\in S \\times S | a = b\\} $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>**An equivalence relation** on a set $ S $ is any relation $ \\thicksim $ satisfying 3 properties:\n",
     " * **reflexivity**: $ (\\forall a \\in S) $  $ a \\thicksim a $;\n",
     " * **symmetry**: $ (\\forall a \\in S) (\\forall b \\in S) $  $ a\\thicksim b \\Longrightarrow b \\thicksim a$;\n",
     " * **transitivity**: $ (\\forall a \\in S) (\\forall b \\in S) (\\forall c \\in S) $ $ (a \\thicksim b \\land b \\thicksim c) \\Longrightarrow a \\thicksim c$;\n",
