--- a/Algebra/Algebra.Chapter 0 by P. Aluffi/Chapter I.ipynb
+++ b/Algebra/Algebra.Chapter 0 by P. Aluffi/Chapter I.ipynb
@@ -312,6 +312,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "If a function is injective *but not surjective*, then it won't have a right-inverse, and it will necessary have more than one left-inverse. Similarly, a surkective function will in general have many right-inverses; they are often called **sections**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The standard notation for *the* inverse of a bijection $ f $ is $ f^{-1} $. This symbol also used for all functions but in a slightly different context: if $ f: \\rightarrow B $ and $ T \\subseteq B $, then $$ f^{-1}(T) = \\{a \\in A | f(a) \\in T\\} $$\n",
+    "that is, it denotes the subset of $ A $ of 'all elements that map to $ T $'.\n",
+    "<br>If $ T = \\{q\\} $ consists of a single element, $ f^{-1}(T) $ (abbreviated $ f^{-1}(q) $) is called the **fiber** of $ f $ over $ q $.\n",
+    "<br>Thus a function $ f:A \\rightarrow B $ is a bijection if it has nonempty fibers over all elements of $ B $ (that is, $ f $ is surjective), and these fibers are singletons ($ f $ is injective)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.6. Monomorphisms and epimorphisms.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
