almost done w/ categories

--- a/Algebra/Algebra.Chapter 0 by P. Aluffi/Chapter I.ipynb
+++ b/Algebra/Algebra.Chapter 0 by P. Aluffi/Chapter I.ipynb
@@ -164,7 +164,7 @@
     "$$ f(S) := \\{b \\in B | (\\exists a \\in A) \\: b = f(a)\\} $$\n",
     "That is, $ f(S) $ is the subset of $ B $ consisting of all elements that are images of elements of $ S $ by the function $ f $. The largest such subset, that is, $ f(A) $, is calles the **image** of $ f $, denoted $ im(f) $.\n",
     "Also, $ f|_{S} $ denotes the 'restriction' of f to the subset $ S $: this is the function $ S \\rightarrow B $ defined by\n",
-    "$$ (\\forall s \\in S): \\: f|_{S}(s) = f(s) $$\n",
+    "$$ (\\forall s \\in S): \\: f | _{S}(s) = f(s) $$\n",
     "That is, $ f|_{S} $ is the *composition* $ f \\circ i $, where $ i: S \\rightarrow A $ is the inclusion. Note that $ f(S) = im(f|_{S}) $."
    ]
   },
@@ -285,8 +285,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br>**Proof:**\n",
-    "<br>⚪️ Let's prove 1.\n",
+    "<br>**Proof:**⚪️\n",
+    "<br>Let's prove 1.\n",
     "<br>$ (\\Rightarrow) $ If $ f: A \\rightarrow B $ has a left-inverse, then there exists a $ g: B \\rightarrow A $ such that $ g \\circ f = id_{A} $. Now assume that $ a^{'} \\neq a^{''} $ are arbitrary different elements in $ A $; then \n",
     "$$ g(f(a^{'})) = id_{A}(a^{'}) = a^{'} \\neq a^{''} = id_{A}(a^{''}) = g(f(a^{''})); $$\n",
     "that is, $ g $ sends $ f(a^{'}) $ and $ f(a^{''}) $ to different elements. This forces $ f(a^{'}) $ and $ f(a{''}) $ to be different, showing that $ f $ is injective.\n",
@@ -330,7 +330,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.6. Monomorphisms and epimorphisms.\n"
+    "### 2.6. Monomorphisms and epimorphisms.\n",
+    "$ f:A \\rightarrow B $ is a **monomorphism** (or **monic**) if for all sets $ Z $ and all functions $ \\alpha', \\alpha'':Z \\rightarrow A $ $$ f \\circ \\alpha' = f \\circ \\alpha'' \\Rightarrow \\alpha' = \\alpha'' $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "🔶**Proposition 2.1.** A function is injective iff it's a monomorphism"
    ]
   },
   {
@@ -338,7 +346,182 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#proof will be added later"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ f:A \\rightarrow B $ is an **epimorphism** if for all sets $ Z $ and all functions $ \\beta', \\beta'':A \\rightarrow Z $\n",
+    "$$ \\beta' \\circ f = \\beta'' \\circ f \\Rightarrow \\beta' = \\beta'' $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.7. Basic examples.\n",
+    "*Natural projections* $ \\pi_{A}, \\pi_{B} $ defined by $ \\pi_{A}((a,b)) := a $ and $ \\pi_{B}((a,b)) := b $ &nbsp; $ \\forall (a,b) \\in A \\times B $ are surjective\n",
+    "<br>Disjoint union $ A \\sqcup B $ is injective \n",
+    "<br>If $ \\thicksim $ is an equivalence relation on a set $ A $, then $ A \\rightarrow A/\\thicksim $ is surjective"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2.8. Canonical decomposition\n",
+    "Let define $ \\thicksim $ on $ A $ the next way: $$ a\\ \\thicksim a'' \\iff f(a') = f(a'') $$\n",
+    "Then:\n",
+    "<br>🔶**Theorem 2.7.** Let $ f: A \\rightarrow B $. Then $ f $ decomposes as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Function Decomposition](Pictures/FunctionDecomposition.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "such that bijection $ \\bar{f} $ defined by $ \\bar{f}([a]_{\\thicksim}):= f(a) $ for all $ a \\in A $."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#proof later "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Categories"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1. Definition\n",
+    "A **category** C consists of\n",
+    " - a class $ Obj(C) $ of **objects** of the category;\n",
+    " - a set $ Hom_C(A,B) $of **morphisms** for every 2 objects with the properties below \n",
+    "<br><br>\n",
+    "Properties of *morphisms*:\n",
+    " - The 'identity' on A: $ \\forall A \\in Obj(C)$  $\\exists$  $1_A \\in Hom_{C}(A,B) $.\n",
+    " - Composition of morphisms: let $ f \\in Hom_{C}(A,B) $ and $ g \\in Hom_{C}(B,D) $. Then $ gf \\in Hom_C(A,D) $, such that:\n",
+    " $$ Hom_C(A,B) \\times Hom_C(B,D) \\rightarrow Hom_C(A,D) $$\n",
+    " and the image of $ (f,g) $ is denoted $ gf $.\n",
+    " - Composition is associative: if $ f \\in Hom_C(A,B) $, $ g \\in Hom_C(B,D) $ and $ h \\in Hom_C(D,E) $, then:\n",
+    " $$ (hg)f = h(gf) $$\n",
+    " - The identity morphisms are identities with respect to composition: $ \\forall f \\in Hom_C(A,B) $:\n",
+    " $$ f1_A = f = 1_Bf $$\n",
+    "<br><br>\n",
+    "The sets $ Hom_C(A,B) $ and $ Hom_C(D,E) $ are disjoint unless $ A = D $ and $ B = E $.\n",
+    "<br>A morphism of an object $ A $ of a category $ C $ to itself is called an **endomorphism**; $ Hom_C(A,A) $ is denoted $ End_C(A) $.\n",
+    "<br>Morphisms can be written with arrows: $ f \\in Hom_C(A,B) $ can be displayed(if the category is understood, one may drop the index $ C $) as $ f: A \\rightarrow B $. This allows one to draw *diagrams* of morphisms in any category, that can be *commutative*\n",
+    "<br>A category is **small** if both objects and morhisms are sets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2. Examples.\n",
+    "*1.* &nbsp; A category of sets is denoted $ \\mathbf{Set} $ such that :\n",
+    " * $ Obj(\\mathbf{Set}) =  $ the class of all sets\n",
+    " * $ Hom_{\\mathbf{Set}}(A,B) = B^{A} $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*2.* &nbsp; *Discrete* category:\n",
+    "<br>Let $ S $ be a set and $ \\thicksim $ is reflexive and transitive relation on $ S $, then:\n",
+    " * objects: the elements of $ S $.\n",
+    " * morphisms: $ Hom(a,b) =  \\left\\{\n",
+    "\\begin{array}{ll}\n",
+    "(a,b) & if \\: a \\thicksim b \\\\\n",
+    "\\emptyset &  otherwise \\\\\n",
+    "\\end{array}\n",
+    "\\right. $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*3.* *Slice* category $ C_{A} $:\n",
+    "<br>Let C be a category and $ A \\in Obj(C) $, then\n",
+    " * $ Obj(C_{A}) = Hom_{C}(Z,A) $ for some $ Z \\in Obj(C) $.\n",
+    " * Let $ f_1, f_2 $ be objects of $ C_A $, then $ Hom_{C_A}(f_1,f_2) = \\{\\sigma\\} $ such that $ f_1 = f_2 \\sigma $.\n",
+    "<br>So basically morphisms $ f_1 \\rightarrow f_2 $ are defined to be *commutative diagrams* in the 'ambient' category $ C $."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Diagram of morphisms](Pictures/MorphismInSliceCat.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*4.* *Coslice* category $ C^{A} $:\n",
+    "Similarly to the definition of slice category, but in this case $Obj(C^A) = Hom_C(A,Z) $ for some $ Z \\in Obj(C) $."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*5.* Category $ \\mathbf{Set^*} $ - a 'concrete' example of coslice category:\n",
+    " * $ Obj(\\mathbf{Set^*}) = \\{f: \\{*\\} \\rightarrow S \\: | \\: S \\in Obj(\\mathbf{Set})\\} $, where $ \\{ * \\} $ - a fixed singleton. It may be denoted as pairs $ (S,s) $, where $f(*) = s $. Objects of $ \\mathbf{Set^*} $ are **pointed sets**.\n",
+    " * A morphism between 2 such objects, $ (S,s) \\rightarrow (T,t) $, corresponds to a set-function $ \\sigma = S \\rightarrow T $ *such that* $ \\sigma(s) = t $."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*6.* Category $ C_{A,B} $ that is defined similar to slice category:\n",
+    "Let $ C $ be a category and $ A, B $ are objects of $ C $, then:\n",
+    " - $ Obj(C_{A,B}) = Hom_C(Z,A) \\times Hom_C(Z,B) $ for some $ Z \\in Obj(C) $. Basically, $ Obj(C_{A,B}) = $ diagrams:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Objects of C_{A,B}](Pictures/ObjectsOfC_{A,B}.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - $ Hom_{C_{A,B}}((f_1,f_2),(g_1,g_2)) = \\{\\sigma\\} $ such that $ f_1 = f_2\\sigma \\: \\land \\: g_1 = g_2 \\sigma$. So:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Morphisms of C_{A,B}](Pictures/MorphismsOfC_{A,B}.png)"
+   ]
   }
  ],
  "metadata": {
