ended with paragraph devoted to definition and examples of categories

--- a/Algebra/Algebra.Chapter 0 by P. Aluffi/Chapter I.ipynb
+++ b/Algebra/Algebra.Chapter 0 by P. Aluffi/Chapter I.ipynb
@@ -462,11 +462,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*3.* *Slice* category $ C_{A} $:\n",
-    "<br>Let C be a category and $ A \\in Obj(C) $, then\n",
-    " * $ Obj(C_{A}) = Hom_{C}(Z,A) $ for some $ Z \\in Obj(C) $.\n",
-    " * Let $ f_1, f_2 $ be objects of $ C_A $, then $ Hom_{C_A}(f_1,f_2) = \\{\\sigma\\} $ such that $ f_1 = f_2 \\sigma $.\n",
-    "<br>So basically morphisms $ f_1 \\rightarrow f_2 $ are defined to be *commutative diagrams* in the 'ambient' category $ C $."
+    "*3.* *Slice* category $ \\mathbf{C_{A}} $:\n",
+    "<br>Let $ \\mathbf{C} $ be a category and $ A \\in Obj(\\mathbf{C}) $, then\n",
+    " * $ Obj(\\mathbf{C_{A}}) = Hom_{\\mathbf{C}}(Z,A) $ for some $ Z \\in Obj(\\mathbf{C}) $.\n",
+    " * Let $ f_1, f_2 $ be objects of $  \\mathbf{C_{A}} $, then $ Hom_{\\mathbf{C_{A}}}(f_1,f_2) = \\{\\sigma\\} $ such that $ f_1 = f_2 \\sigma $.\n",
+    "<br>So basically morphisms $ f_1 \\rightarrow f_2 $ are defined to be *commutative diagrams* in the 'ambient' category $ \\mathbf{C} $."
    ]
   },
   {
@@ -480,8 +480,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*4.* *Coslice* category $ C^{A} $:\n",
-    "Similarly to the definition of slice category, but in this case $Obj(C^A) = Hom_C(A,Z) $ for some $ Z \\in Obj(C) $."
+    "*4.* *Coslice* category $ \\mathbf{C^{A}} $:\n",
+    "Similarly to the definition of slice category, but in this case $Obj(\\mathbf{C^{A}}) = Hom_{\\mathbf{C}}(A,Z) $ for some $ Z \\in Obj(\\mathbf{C}) $."
    ]
   },
   {
@@ -497,9 +497,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*6.* Category $ C_{A,B} $ that is defined similar to slice category:\n",
-    "Let $ C $ be a category and $ A, B $ are objects of $ C $, then:\n",
-    " - $ Obj(C_{A,B}) = Hom_C(Z,A) \\times Hom_C(Z,B) $ for some $ Z \\in Obj(C) $. Basically, $ Obj(C_{A,B}) = $ diagrams:"
+    "*6.* Category $ \\mathbf{C_{A,B}} $ that is defined similar to slice category:\n",
+    "Let $ \\mathbf{C} $ be a category and $ A, B $ are objects of $ \\mathbf{C} $, then:\n",
+    " - $ Obj(\\mathbf{C_{A,B}}) = Hom_{\\mathbf{C}}(Z,A) \\times Hom_{\\mathbf{C}}(Z,B) $ for some $ Z \\in Obj(\\mathbf{C}) $. Basically, $ Obj(\\mathbf{C_{A,B}}) = $ diagrams:"
    ]
   },
   {
@@ -513,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " - $ Hom_{C_{A,B}}((f_1,f_2),(g_1,g_2)) = \\{\\sigma\\} $ such that $ f_1 = f_2\\sigma \\: \\land \\: g_1 = g_2 \\sigma$. So:"
+    " - $ Hom_{\\mathbf{C_{A,B}}}((f_1,f_2),(g_1,g_2)) = \\{\\sigma\\} $ such that $ f_1 = f_2\\sigma \\: \\land \\: g_1 = g_2 \\sigma$. So:"
    ]
   },
   {
@@ -521,6 +521,36 @@
    "metadata": {},
    "source": [
     "![Morphisms of C_{A,B}](Pictures/MorphismsOfC_{A,B}.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*7.* $ \\mathbf{C_{\\alpha,\\beta}} $ -The *fibered* version of $ C_{A,B} $(and $ C^{A,B} $):\n",
+    "<br>Let $ \\mathbf{C} $ be a category and choose 2 morphisms $ \\alpha: A \\rightarrow C $ and $ \\beta: B \\rightarrow C $, then:\n",
+    " - $ Obj(\\mathbf{C_{\\alpha,\\beta}}) $= commutative diagrams:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Objects of that category displayed](Pictures/ObjectsOfFiberedVersion.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " - morphisms correspond to commutative diagrams:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Morphisms of that category](Pictures/MorphismsOfFiberedVersion.png)"
    ]
   }
  ],
